# claude-conductor

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
scripts/: generate_icons.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_detector.rs  commands.rs  config_generator.rs  lib.rs  main.rs  models.rs  process_manager.rs  profile_store.rs
src/components/: ErrorToast.tsx  InstanceMonitor.tsx  ProfileCard.tsx  ProfileModal.tsx  ProfilesView.tsx  SettingsView.tsx  Sidebar.tsx  Titlebar.tsx
src/stores/: index.ts
src/types/: index.ts
