[package]
name = "claude-conductor"
version = "0.1.0"
description = "Multi-profile launcher and manager for Claude Desktop"
authors = ["Velocity BPA"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_conductor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-conductor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
log = "0.4"

# Process monitoring
sysinfo = "0.31"

# Secure credential storage (macOS Keychain, Windows Credential Store, Linux Secret Service)
keyring = { version = "2", features = ["apple-native", "windows-native", "sync-secret-service"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
